<resources>
    <string name="app_name">AynApp</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_by_google">Login By Google</string>
    <string name="name">Name</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="return_to_login">Return to login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <string name="project_title">Project Title</string>

    <string name="bmwimg">https://www.bmwgroup.com/content/dam/grpw/websites/bmwgroup_com/home/720x720_New_7_Series.jpg.grp-transform/small/720x720_New_7_Series.jpg</string>
    <string name="jaguarimg">https://aaaautoeuimg.vshcdn.net/cool/700095050_4_640x480x95.jpg?67766</string>
    <string name="Ximg">https://www.tesla.com/sites/default/files/images/homepage/home-hero-modelx-mobile.jpg?20160804</string>
    <string name="AMimg">http://cdn.astonmartin.com/sitefinity-dealerwebsites/uk/dbs-banner_mobile.jpg?sfvrsn=0</string>
    <string name="Aston"><![CDATA[https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/2020-aston-martin-dbs-superleggera-volante-1-1556031727.jpg?crop=0.731xw:0.548xh;0.252xw,0.304xh&resize=1200:*]]></string>
    <string name="bmw"><![CDATA[https://images.unsplash.com/photo-1593460354583-4224ab273cfe?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80]]></string>
    <string name="deville">https://www.nsclassics.com/galleria_images/2921/2921_p2_l.jpg</string>
    <string name="cady">https://static.wheels.ae/imgs/684_WH_160802_MW_tariq_AIZA-_9_-_Read-Only_-medium.jpg</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_image">Change Image</string>
    <string name="bio">Bio</string>
    <string name="add_project">Add project</string>
    <string name="descriptiontext">Description:</string>
    <string name="add_a_project">Add a project</string>
    <string name="sign_out">Sign Out</string>
    <string name="search">Search</string>
    <string name="follow">Follow</string>
    <string name="edit">Edit</string>
    <string name="Lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="delete">Delete</string>
    <string name="delete_project">Delete Project</string>
    <string name="do_you_want_to_delete_the_project">Do you want to delete the project?</string>
    <string name="edit_project">Edit Project</string>
    <string name="description">Description</string>
    <string name="edit_image">Edit Image</string>
</resources>